--- a/Enunciado.html
+++ b/Enunciado.html
@@ -2,10 +2,11 @@
 <html>
 <head>
   <!-- Validacion de formularios -->
-  <title>Formulario Personal</title>
+  <title>Formulario</title>
   <link rel="stylesheet" type="text/css" href="estilos.css">
   <style>
   </style>
+
 
 
 <script type="text/javascript" src="funciones.js"></script>
