--- a/Enunciado.html
+++ b/Enunciado.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <!-- Validacion de formularios -->
-  <title>Formulario</title>
+  <title>Formulario Personal</title>
   <link rel="stylesheet" type="text/css" href="estilos.css">
   <style>
   </style>
